baml_language/crates/baml_tests/snapshots/diagnostic_errors/is_pattern_negative/baml_tests__diagnostic_errors__is_pattern_negative__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.WrapGeneric {
  val: user.T
}
class user.WrapNonGeneric {
  x: int
}
function user.binding_leak_if() -> int  [expr] {
  { let v: int | string = 7 } if (v is x: int) {  } x else {  } 0
}
function user.binding_leak_scope() -> int  [expr] {
  { let v: int | string = 7; let _ = v is x: int } x
}
function user.from_json(j: baml.json.json) -> user.WrapNonGeneric  [expr] {
  user.WrapNonGeneric { x: baml.json.from_json(baml.json.field(j, "x")) }
}
function user.from_json(j: baml.json.json) -> user.WrapGeneric  [expr] {
  user.WrapGeneric { val: baml.json.from_json(baml.json.field(j, "val")) }
}
function user.or_pattern_leak() -> int  [expr] {
  { let v: int | string = 7; let _ = v is x: int | x: string } x
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "val": baml.json.to_json(self.val) }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "x": self.x.to_json() }
}
function user.unresolved_class_head(v: user.WrapNonGeneric) -> bool  [expr] {
  {  } v is Frobnitz { x: x }
}
function user.unresolved_generic_arg(v: user.WrapGeneric) -> bool  [expr] {
  {  } v is user.WrapGeneric
}
function user.unresolved_type_pattern(v: int | string) -> bool  [expr] {
  {  } v is user.Frobnitz
}
