baml_language/crates/baml_tests/snapshots/diagnostic_errors/is_pattern_negative/baml_tests__diagnostic_errors__is_pattern_negative__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.binding_leak_scope() -> int throws never {
  { : unknown
    let v: int | string = 7 : 7 -> int | string
    let _ = v is x: int : bool
    x : unknown
  }
  !! 471..472: unresolved name: x
}
function user.binding_leak_if() -> int throws never {
  { : unknown | 0
    let v: int | string = 7 : 7 -> int | string
    if (v is x: int : bool) : unknown | 0
      { : unknown
        x : unknown
      }
    else
      { : 0
        0 : 0
      }
  }
  !! 693..694: unresolved name: x
}
function user.or_pattern_leak() -> int throws never {
  { : unknown
    let v: int | string = 7 : 7 -> int | string
    let _ = v is x: int | x: string : bool
    x : unknown
  }
  !! 881..894: Or-pattern alternatives bind `x` with conflicting types: `int` vs `string`
  !! 900..901: unresolved name: x
}
class user.WrapNonGeneric {
  x: int
}
function user.unresolved_class_head(v: user.WrapNonGeneric) -> bool throws never {
  { : bool
    v is Frobnitz { x: x } : bool
  }
  !! 1081..1095: unresolved name: Frobnitz
}
class user.WrapGeneric {
  val: T
}
function user.unresolved_generic_arg(v: user.WrapGeneric<int>) -> bool throws never {
  { : bool
    v is WrapGeneric<Missing> : bool
  }
  !! 1290..1297: unresolved type: Missing
}
function user.unresolved_type_pattern(v: int | string) -> bool throws never {
  { : bool
    v is Frobnitz : bool
  }
  !! 1439..1447: unresolved type: Frobnitz
}
class user.WrapNonGeneric$stream {
  x: int | null
}
class user.WrapGeneric$stream {
  val: T | null
}
