baml_language/crates/baml_tests/snapshots/diagnostic_errors/is_pattern_negative/baml_tests__diagnostic_errors__is_pattern_negative__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 47055
---
=== COMPILER2 DIAGNOSTICS ===
  [type] error: unresolved name: x
    ╭─[ main.baml:10:5 ]
    │
 10 │     x
    │     ┬  
    │     ╰── unresolved name: x
    │ 
    │ Note: Error code: E0003
────╯

  [type] error: unresolved name: x
    ╭─[ main.baml:17:28 ]
    │
 17 │     if (v is let x: int) { x } else { 0 }
    │                            ┬  
    │                            ╰── unresolved name: x
    │ 
    │ Note: Error code: E0003
────╯

  [type] error: or-pattern binding `x` has conflicting types: int and string
    ╭─[ main.baml:23:34 ]
    │
 23 │     let _ = v is (let x: int) | (let x: string)
    │                                  ──────┬──────  
    │                                        ╰──────── or-pattern binding `x` has conflicting types: int and string
    │ 
    │ Note: Error code: E0001
────╯

  [type] error: unresolved name: x
    ╭─[ main.baml:24:5 ]
    │
 24 │     x
    │     ┬  
    │     ╰── unresolved name: x
    │ 
    │ Note: Error code: E0003
────╯

  [type] error: unresolved name: Frobnitz
    ╭─[ main.baml:30:10 ]
    │
 30 │     v is Frobnitz { x }
    │          ───────┬──────  
    │                 ╰──────── unresolved name: Frobnitz
    │ 
    │ Note: Error code: E0003
────╯

  [type] error: unresolved type: Missing
    ╭─[ main.baml:36:10 ]
    │
 36 │     v is WrapGeneric<Missing>
    │          ──────────┬─────────  
    │                    ╰─────────── unresolved type: Missing
    │ 
    │ Note: Error code: E0002
────╯

  [type] error: unresolved type: Frobnitz
    ╭─[ main.baml:41:10 ]
    │
 41 │     v is Frobnitz
    │          ────┬───  
    │              ╰───── unresolved type: Frobnitz
    │ 
    │ Note: Error code: E0002
────╯
